<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login">

    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back!"
        android:textColor="@color/white"/>


    <TextView
        android:layout_below="@+id/welcome"
        android:id="@+id/login_text"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please login to your account."
        android:alpha="0.7"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:alpha="0.6"
        android:backgroundTint="@color/white"
        android:hint="Email Address"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:password="true"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/email1"
        android:id="@+id/password1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="35dp"
        android:alpha="0.8"
        android:text="Forgot?"
        android:textAlignment="textEnd"
        android:textColor="@color/purple_200"
        android:textSize="20dp" />

    <Button
        android:backgroundTint="#1D2865"
        android:text="LOGIN"
        android:id="@+id/button_login1"
        android:layout_below="@+id/password1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        />

    <Button
        android:backgroundTint="@color/black"
        android:text="REGISTER NOW"
        android:id="@+id/button_register1"
        android:layout_below="@+id/button_login1"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />


</RelativeLayout>