<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/welcome"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textColor="@color/white"/>


    <TextView
        android:layout_below="@+id/welcome"
        android:id="@+id/login_text"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create your account."
        android:alpha="0.7"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:alpha="0.6"
        android:backgroundTint="@color/white"
        android:hint="Email Address"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Password"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/email"
        android:id="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />

    <EditText
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Confirm Password"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/password"
        android:id="@+id/password_confirm"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />

    <Button
        android:backgroundTint="#1D2865"
        android:text="Sign Up"
        android:id="@+id/button_signup"
        android:layout_below="@+id/password_confirm"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        />

    <Button
        android:backgroundTint="@color/black"
        android:text="Login"
        android:id="@+id/button_login"
        android:layout_below="@+id/button_signup"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />


</RelativeLayout>