<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/create_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Create Profile"
        android:textColor="@color/white"
        android:textSize="25dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/display_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/create_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_account" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/gradient"
        android:layout_alignBottom="@id/display_pic"
        android:layout_alignRight="@id/display_pic"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/gradient"
        android:layout_alignBottom="@id/display_pic"
        android:layout_alignRight="@id/display_pic"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:layout_margin="5dp"

        />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/gradient"
        android:layout_alignBottom="@id/display_pic"
        android:layout_alignRight="@id/display_pic"
        android:src="@drawable/ic_add_black"
        android:backgroundTint="@color/white"
        android:padding="3dp"
        android:layout_margin="5dp"

        />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_pic"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:alpha="0.7"
        android:gravity="center"
        android:text="Please Enter Details."
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:alpha="0.6"
        android:backgroundTint="@color/white"
        android:hint="First Name"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp" />

    <EditText
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Last Name"
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/first_name"
        android:id="@+id/last_name"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />

    <EditText
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:hint="Bio..."
        android:textColorHint="@color/white"
        android:textAlignment="textStart"
        android:layout_below="@+id/last_name"
        android:id="@+id/bio"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:layout_marginRight="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        />


    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/bio"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="35dp"
        android:backgroundTint="#1D2865"
        android:text="SAVE"
        android:textSize="20dp" />

</RelativeLayout>