...
            android:src="@drawable/edit_icon"
            app:tint="@color/white" />

        <TextView
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="1 new message"
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter" />

        <ImageView
...
